--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
     font-weight: 700;
   }
 
+  option{
+    font-weight: 500;
+    text-align: center;
+  }
+
   .converter-wrapper {
     margin: 0 auto;
     width: 100%;
@@ -84,7 +89,6 @@
     background-color: #202E3C;
   }
   
-
   .converter-button {
     float: center;
     margin-top: 20px;
@@ -96,11 +100,6 @@
     border-radius: 10px;
     border-color: papayawhip;
   }
-
-  .converter-wrapper section {
-    padding-top:20px;
-    padding-bottom:20px;
-   }
 
   .converter-side-a {
     padding-right: 10px;
